[package]
edition = "2021"
name = "wasmedge-nn"
version = "0.1.0"

[dependencies]
anyhow = "1.0.42"
image = {version = "0.24", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]}
thiserror = "1.0.31"
wasi-nn = "0.1.0"
